--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
+    "cheerio": "^1.0.0-rc.12",
     "html-react-parser": "^5.1.12",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
@@ -18,7 +19,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-select-async-paginate": "^0.7.4",
+    "title-case": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
