--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "cheerio": "^1.0.0-rc.12",
+    "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.12",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "quill": "^2.0.2",
+    "quilljs-markdown": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
