Complete remaining next-auth

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/blogstree"
 
-GOOGLE_CLIENT_ID="831541362592-rmust6or6b8gkknhsgug8kbpajt30ghe.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_ID_1="196536850172-1ej6gnes6ofn3g4b5ajgegqad2mitkfp.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET_1="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"
 
 FACEBOOK_CLIENT_ID="1469925057225027"
 FACEBOOK_CLIENT_SECRET="c7775a25dc5a7d844fb56980f19e8a47"
