--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.12",
@@ -24,9 +25,12 @@
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-select-async-paginate": "^0.7.4",
-    "title-case": "^4.3.1"
+    "title-case": "^4.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
